# Bili23-Downloader

./: .gitignore  CHANGELOG.md  NOTICE  README.md  README_en.md  UPSTREAM.md  bili23  media-agent  pyproject.toml
.agents/skills/bili23-cli/: SKILL.md
.agents/skills/bili23-cli/agents/: openai.yaml
.agents/skills/media-agent-cli/: SKILL.md
.agents/skills/media-agent-cli/agents/: openai.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: app.icns
docs/: agent-cli.en.md  agent-cli.md
scripts/: install-global.sh  translate.py
src/: bili23_cli.py  main.py
src/cli/: __init__.py  download.py  service.py
src/gui/component/parse_list/: tree_view.py
src/gui/component/widget/: __init__.py
src/gui/dialog/: log.py  player.py
src/gui/dialog/main_window/: about.py
src/gui/dialog/setting/: edit_rule.py  rule_list.py
src/gui/interface/: cache.py  main_window.py  parse.py  setting.py
src/res/: resources_rc.py
src/util/common/: config.py
src/util/download/cover/: db.py
src/util/download/task/: db.py  manager.py
src/util/ffmpeg/: __init__.py
src/util/misc/: history.py  update.py
src/util/parse/: worker.py
src/util/parse/additional/file/: danmaku_ass.py  subtitle_ass.py
src/util/player_cache/: __init__.py  crypto.py  manager.py  paths.py  store.py
tests/: test_cli_service.py  test_global_install.py  test_player_cache.py
