[project]
name = "media-agent-cli"
version = "0.1.0"
description = "A local CLI and Agent Skill for personally authorized media preparation workflows."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "PySide6==6.10.3",
    "PySide6-Fluent-Widgets==1.11.2",
    "orjson==3.11.9",
    "qrcode==8.2",
    "protobuf==7.35.1",
    "httpx==0.28.1",
    "psutil==7.2.2",
]
authors = [
    {name = "ScottSloan", email = "world1019@sina.com"},
    {name = "Raccoon-njuse"},
]
maintainers = [
    {name = "Raccoon-njuse"},
]
encoding = "utf-8"
